--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
-  <button type="button">Clique aqui</button>
+  <input type="text" id="cep" placeholder="Digite os nº do seu CEP">
+  <button type="button" onclick="consultaCep()">Consultar</button>
+  <p id="logradouro"></p>
+  <p id="bairro"></p>
+  <p id="localidade"></p>
+  <p id="uf"></p>
 </body>
 </html>
