--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
+  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 </head>
 <body>
   <input type="text" id="cep" placeholder="Digite os nº do seu CEP">
