--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark">
@@ -16,5 +17,33 @@
       <button class="btn btn-outline-success my-2 my-sm-0" onclick="consultaCep()">Buscar</button>
     </div>
   </nav>
+
+  <div class="container" style="margin-top: 24px; display: none;">
+    <div class="row">
+      <h3 id="titulo_cep">CEP</h3>
+    </div>
+    <div class="row" style="margin-top: 24px;">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td>Logradouro</td>
+            <td id="logradouro"></td>
+          </tr>
+          <tr>
+            <td>Bairro</td>
+            <td id="bairro"></td>
+          </tr>
+          <tr>
+            <td>Localidade</td>
+            <td id="localidade"></td>
+          </tr>
+          <tr>
+            <td>UF</td>
+            <td id="uf"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </body>
 </html>
