--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     </div>
   </nav>
 
-  <div class="container" style="margin-top: 24px; display: none;">
+  <div class="container barra-progresso" style="margin-top: 80px;">
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animamted" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+    </div>
+  </div>
+
+  <div class="container cep" style="margin-top: 24px;">
     <div class="row">
       <h3 id="titulo_cep">CEP</h3>
     </div>
