Acrescentando logo da DIO

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a href="" class="navbar-brand text-white">Consultar CEP</a>
+    <a href="" class="navbar-brand text-white">
+      <img src="img/dio.png" alt="Logotipo da Digital Innovation One" width="100px">
+      #DIO > Consultar CEP
+    </a>
     <div class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Digite o CEP" id="cep">
       <button class="btn btn-outline-success my-2 my-sm-0" onclick="consultaCep()">Buscar</button>
